#9 Updated NSM - NSO classes

--- a/docs/api-reference/CRMScript.NetServer.NSListEntity.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSListEntity.yml
@@ -145,7 +145,7 @@ items:
     parameters: []
     return:
       type: CRMScript.Global.Bool
-      description: Indicates if this is a MDO list
+      description: Indicates if this is an MDO list
   example: 
   - "\n<pre><code>NSListEntity thing;\nBool isMDOList = thing.GetIsMDOList();</code></pre>\n"
 - uid: CRMScript.NetServer.NSListEntity.GetListType()
@@ -353,7 +353,7 @@ items:
     parameters:
     - id: isMDOList
       type: CRMScript.Global.Bool
-      description: Indicates if this is a MDO list
+      description: Indicates if this is an MDO list
     return:
       type: CRMScript.Global.Void
   example: 
