--- a/docs/api-reference/CRMScript.NetServer.NSMailbox.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSMailbox.yml
@@ -6,11 +6,11 @@ items:
   langs:
   - crmscript
   children:
+  - CRMScript.NetServer.NSMailbox.#ctor
   - CRMScript.NetServer.NSMailbox.GetAddress()
   - CRMScript.NetServer.NSMailbox.GetCategoryName()
   - CRMScript.NetServer.NSMailbox.GetMailInFilterId()
   - CRMScript.NetServer.NSMailbox.GetPriorityName()
-  - CRMScript.NetServer.NSMailbox.#ctor
   - CRMScript.NetServer.NSMailbox.SetAddress(String)
   - CRMScript.NetServer.NSMailbox.SetCategoryName(String)
   - CRMScript.NetServer.NSMailbox.SetMailInFilterId(Integer)
@@ -20,6 +20,21 @@ items:
   fullName: CRMScript.NetServer.NSMailbox
   type: Class
   summary: 
+  example: 
+- uid: CRMScript.NetServer.NSMailbox.#ctor
+  commentId: M:CRMScript.NetServer.NSMailbox.#ctor
+  id: '#ctor'
+  so.intellisense: Void.NSMailbox
+  langs:
+  - crmscript
+  name: '#ctor'
+  nameWithType: NSMailbox.#ctor
+  fullName: CRMScript.NetServer.NSMailbox.#ctor
+  type: Constructor
+  summary: 
+  remarks: 
+  syntax: 
+    content: NSMailbox
   example: 
 - uid: CRMScript.NetServer.NSMailbox.GetAddress()
   commentId: M:CRMScript.NetServer.NSMailbox.GetAddress()
@@ -31,13 +46,14 @@ items:
   nameWithType: NSMailbox.GetAddress()
   fullName: CRMScript.NetServer.NSMailbox.GetAddress()
   type: Method
-  summary: "\nThe address associated with this mailbox (used as FROM: address when sending emails).\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: String GetAddress()
     parameters: []
     return:
       type: CRMScript.Global.String
+      description: The address associated with this mailbox (used as FROM address when sending emails).
   example: 
   - "\n<pre><code>NSMailbox thing;\nString address = thing.GetAddress();</code></pre>\n"
 - uid: CRMScript.NetServer.NSMailbox.GetCategoryName()
@@ -69,13 +85,14 @@ items:
   nameWithType: NSMailbox.GetMailInFilterId()
   fullName: CRMScript.NetServer.NSMailbox.GetMailInFilterId()
   type: Method
-  summary: "\nThe primary key (auto-incremented)\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: Integer GetMailInFilterId()
     parameters: []
     return:
       type: CRMScript.Global.Integer
+      description: The primary key (auto-incremented)
   example: 
   - "\n<pre><code>NSMailbox thing;\nInteger mailInFilterId = thing.GetMailInFilterId();</code></pre>\n"
 - uid: CRMScript.NetServer.NSMailbox.GetPriorityName()
@@ -88,30 +105,16 @@ items:
   nameWithType: NSMailbox.GetPriorityName()
   fullName: CRMScript.NetServer.NSMailbox.GetPriorityName()
   type: Method
-  summary: "\nThe name of the priority that the mailbox is connected to\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: String GetPriorityName()
     parameters: []
     return:
       type: CRMScript.Global.String
+      description: The name of the priority that the mailbox is connected to
   example: 
   - "\n<pre><code>NSMailbox thing;\nString priorityName = thing.GetPriorityName();</code></pre>\n"
-- uid: CRMScript.NetServer.NSMailbox.#ctor
-  commentId: M:CRMScript.NetServer.NSMailbox.#ctor
-  id: '#ctor'
-  so.intellisense: Void.NSMailbox
-  langs:
-  - crmscript
-  name: '#ctor'
-  nameWithType: NSMailbox.#ctor
-  fullName: CRMScript.NetServer.NSMailbox.#ctor
-  type: Constructor
-  summary: 
-  remarks: 
-  syntax: 
-    content: NSMailbox
-  example: 
 - uid: CRMScript.NetServer.NSMailbox.SetAddress(String)
   commentId: M:CRMScript.NetServer.NSMailbox.SetAddress(String)
   id: 'SetAddress(String)'
@@ -122,14 +125,14 @@ items:
   nameWithType: NSMailbox.SetAddress(String)
   fullName: CRMScript.NetServer.NSMailbox.SetAddress(String)
   type: Method
-  summary: "\nThe address associated with this mailbox (used as FROM: address when sending emails).\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: Void SetAddress(String address)
     parameters:
     - id: address
       type: CRMScript.Global.String
-      description: 
+      description: The address associated with this mailbox (used as FROM address when sending emails).
     return:
       type: CRMScript.Global.Void
   example: 
@@ -144,14 +147,14 @@ items:
   nameWithType: NSMailbox.SetCategoryName(String)
   fullName: CRMScript.NetServer.NSMailbox.SetCategoryName(String)
   type: Method
-  summary: "\nThe name of the category that the mailbox is connected to\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: Void SetCategoryName(String categoryName)
     parameters:
     - id: categoryName
       type: CRMScript.Global.String
-      description: 
+      description: The name of the category that the mailbox is connected to
     return:
       type: CRMScript.Global.Void
   example: 
