--- a/docs/api-reference/CRMScript.NetServer.NSMessageDeliveryStatus.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSMessageDeliveryStatus.yml
@@ -6,10 +6,10 @@ items:
   langs:
   - crmscript
   children:
+  - CRMScript.NetServer.NSMessageDeliveryStatus.#ctor
   - CRMScript.NetServer.NSMessageDeliveryStatus.GetMessagingId()
   - CRMScript.NetServer.NSMessageDeliveryStatus.GetStatus()
   - CRMScript.NetServer.NSMessageDeliveryStatus.GetStatusDescription()
-  - CRMScript.NetServer.NSMessageDeliveryStatus.#ctor
   - CRMScript.NetServer.NSMessageDeliveryStatus.SetMessagingId(Integer)
   - CRMScript.NetServer.NSMessageDeliveryStatus.SetStatus(Integer)
   - CRMScript.NetServer.NSMessageDeliveryStatus.SetStatusDescription(String)
@@ -19,63 +19,6 @@ items:
   type: Class
   summary: 
   example: 
-- uid: CRMScript.NetServer.NSMessageDeliveryStatus.GetMessagingId()
-  commentId: M:CRMScript.NetServer.NSMessageDeliveryStatus.GetMessagingId()
-  id: 'GetMessagingId()'
-  so.intellisense: NSMessageDeliveryStatus.GetMessagingId
-  langs:
-  - crmscript
-  name: 'GetMessagingId()'
-  nameWithType: NSMessageDeliveryStatus.GetMessagingId()
-  fullName: CRMScript.NetServer.NSMessageDeliveryStatus.GetMessagingId()
-  type: Method
-  summary: "\nId to the outgoing message table\n"
-  remarks: 
-  syntax: 
-    content: Integer GetMessagingId()
-    parameters: []
-    return:
-      type: CRMScript.Global.Integer
-  example: 
-  - "\n<pre><code>NSMessageDeliveryStatus thing;\nInteger messagingId = thing.GetMessagingId();</code></pre>\n"
-- uid: CRMScript.NetServer.NSMessageDeliveryStatus.GetStatus()
-  commentId: M:CRMScript.NetServer.NSMessageDeliveryStatus.GetStatus()
-  id: 'GetStatus()'
-  so.intellisense: NSMessageDeliveryStatus.GetStatus
-  langs:
-  - crmscript
-  name: 'GetStatus()'
-  nameWithType: NSMessageDeliveryStatus.GetStatus()
-  fullName: CRMScript.NetServer.NSMessageDeliveryStatus.GetStatus()
-  type: Method
-  summary: "\nCurrent message status\n"
-  remarks: 
-  syntax: 
-    content: Integer GetStatus()
-    parameters: []
-    return:
-      type: CRMScript.Global.Integer
-  example: 
-  - "\n<pre><code>NSMessageDeliveryStatus thing;\nInteger status = thing.GetStatus();</code></pre>\n"
-- uid: CRMScript.NetServer.NSMessageDeliveryStatus.GetStatusDescription()
-  commentId: M:CRMScript.NetServer.NSMessageDeliveryStatus.GetStatusDescription()
-  id: 'GetStatusDescription()'
-  so.intellisense: NSMessageDeliveryStatus.GetStatusDescription
-  langs:
-  - crmscript
-  name: 'GetStatusDescription()'
-  nameWithType: NSMessageDeliveryStatus.GetStatusDescription()
-  fullName: CRMScript.NetServer.NSMessageDeliveryStatus.GetStatusDescription()
-  type: Method
-  summary: "\nString describing the current message status.\n"
-  remarks: 
-  syntax: 
-    content: String GetStatusDescription()
-    parameters: []
-    return:
-      type: CRMScript.Global.String
-  example: 
-  - "\n<pre><code>NSMessageDeliveryStatus thing;\nString statusDescription = thing.GetStatusDescription();</code></pre>\n"
 - uid: CRMScript.NetServer.NSMessageDeliveryStatus.#ctor
   commentId: M:CRMScript.NetServer.NSMessageDeliveryStatus.#ctor
   id: '#ctor'
@@ -91,6 +34,66 @@ items:
   syntax: 
     content: NSMessageDeliveryStatus
   example: 
+- uid: CRMScript.NetServer.NSMessageDeliveryStatus.GetMessagingId()
+  commentId: M:CRMScript.NetServer.NSMessageDeliveryStatus.GetMessagingId()
+  id: 'GetMessagingId()'
+  so.intellisense: NSMessageDeliveryStatus.GetMessagingId
+  langs:
+  - crmscript
+  name: 'GetMessagingId()'
+  nameWithType: NSMessageDeliveryStatus.GetMessagingId()
+  fullName: CRMScript.NetServer.NSMessageDeliveryStatus.GetMessagingId()
+  type: Method
+  summary: "\n\n"
+  remarks: 
+  syntax: 
+    content: Integer GetMessagingId()
+    parameters: []
+    return:
+      type: CRMScript.Global.Integer
+      description: ID to the outgoing message table
+  example: 
+  - "\n<pre><code>NSMessageDeliveryStatus thing;\nInteger messagingId = thing.GetMessagingId();</code></pre>\n"
+- uid: CRMScript.NetServer.NSMessageDeliveryStatus.GetStatus()
+  commentId: M:CRMScript.NetServer.NSMessageDeliveryStatus.GetStatus()
+  id: 'GetStatus()'
+  so.intellisense: NSMessageDeliveryStatus.GetStatus
+  langs:
+  - crmscript
+  name: 'GetStatus()'
+  nameWithType: NSMessageDeliveryStatus.GetStatus()
+  fullName: CRMScript.NetServer.NSMessageDeliveryStatus.GetStatus()
+  type: Method
+  summary: "\n\n"
+  remarks: 
+  syntax: 
+    content: Integer GetStatus()
+    parameters: []
+    return:
+      type: CRMScript.Global.Integer
+      description: Current message status
+  example: 
+  - "\n<pre><code>NSMessageDeliveryStatus thing;\nInteger status = thing.GetStatus();</code></pre>\n"
+- uid: CRMScript.NetServer.NSMessageDeliveryStatus.GetStatusDescription()
+  commentId: M:CRMScript.NetServer.NSMessageDeliveryStatus.GetStatusDescription()
+  id: 'GetStatusDescription()'
+  so.intellisense: NSMessageDeliveryStatus.GetStatusDescription
+  langs:
+  - crmscript
+  name: 'GetStatusDescription()'
+  nameWithType: NSMessageDeliveryStatus.GetStatusDescription()
+  fullName: CRMScript.NetServer.NSMessageDeliveryStatus.GetStatusDescription()
+  type: Method
+  summary: "\n\n"
+  remarks: 
+  syntax: 
+    content: String GetStatusDescription()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: String describing the current message status.
+  example: 
+  - "\n<pre><code>NSMessageDeliveryStatus thing;\nString statusDescription = thing.GetStatusDescription();</code></pre>\n"
 - uid: CRMScript.NetServer.NSMessageDeliveryStatus.SetMessagingId(Integer)
   commentId: M:CRMScript.NetServer.NSMessageDeliveryStatus.SetMessagingId(Integer)
   id: 'SetMessagingId(Integer)'
@@ -101,14 +104,14 @@ items:
   nameWithType: NSMessageDeliveryStatus.SetMessagingId(Integer)
   fullName: CRMScript.NetServer.NSMessageDeliveryStatus.SetMessagingId(Integer)
   type: Method
-  summary: "\nId to the outgoing message table\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: Void SetMessagingId(Integer messagingId)
     parameters:
     - id: messagingId
       type: CRMScript.Global.Integer
-      description: 
+      description: ID to the outgoing message table
     return:
       type: CRMScript.Global.Void
   example: 
@@ -123,14 +126,14 @@ items:
   nameWithType: NSMessageDeliveryStatus.SetStatus(Integer)
   fullName: CRMScript.NetServer.NSMessageDeliveryStatus.SetStatus(Integer)
   type: Method
-  summary: "\nCurrent message status\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: Void SetStatus(Integer status)
     parameters:
     - id: status
       type: CRMScript.Global.Integer
-      description: 
+      description: Current message status
     return:
       type: CRMScript.Global.Void
   example: 
@@ -145,14 +148,14 @@ items:
   nameWithType: NSMessageDeliveryStatus.SetStatusDescription(String)
   fullName: CRMScript.NetServer.NSMessageDeliveryStatus.SetStatusDescription(String)
   type: Method
-  summary: "\nString describing the current message status.\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: Void SetStatusDescription(String statusDescription)
     parameters:
     - id: statusDescription
       type: CRMScript.Global.String
-      description: 
+      description: String describing the current message status.
     return:
       type: CRMScript.Global.Void
   example: 
