--- a/docs/api-reference/CRMScript.NetServer.NSModuleLicenseLink.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSModuleLicenseLink.yml
@@ -6,6 +6,7 @@ items:
   langs:
   - crmscript
   children:
+  - CRMScript.NetServer.NSModuleLicenseLink.#ctor
   - CRMScript.NetServer.NSModuleLicenseLink.GetAssigned()
   - CRMScript.NetServer.NSModuleLicenseLink.GetCanAssign()
   - CRMScript.NetServer.NSModuleLicenseLink.GetDescription()
@@ -19,7 +20,6 @@ items:
   - CRMScript.NetServer.NSModuleLicenseLink.GetTooltip()
   - CRMScript.NetServer.NSModuleLicenseLink.GetTotal()
   - CRMScript.NetServer.NSModuleLicenseLink.GetUnrestricted()
-  - CRMScript.NetServer.NSModuleLicenseLink.#ctor
   - CRMScript.NetServer.NSModuleLicenseLink.SetAssigned(Bool)
   - CRMScript.NetServer.NSModuleLicenseLink.SetCanAssign(Bool)
   - CRMScript.NetServer.NSModuleLicenseLink.SetDescription(String)
@@ -39,6 +39,21 @@ items:
   type: Class
   summary: 
   example: 
+- uid: CRMScript.NetServer.NSModuleLicenseLink.#ctor
+  commentId: M:CRMScript.NetServer.NSModuleLicenseLink.#ctor
+  id: '#ctor'
+  so.intellisense: Void.NSModuleLicenseLink
+  langs:
+  - crmscript
+  name: '#ctor'
+  nameWithType: NSModuleLicenseLink.#ctor
+  fullName: CRMScript.NetServer.NSModuleLicenseLink.#ctor
+  type: Constructor
+  summary: 
+  remarks: 
+  syntax: 
+    content: NSModuleLicenseLink
+  example: 
 - uid: CRMScript.NetServer.NSModuleLicenseLink.GetAssigned()
   commentId: M:CRMScript.NetServer.NSModuleLicenseLink.GetAssigned()
   id: 'GetAssigned()'
@@ -49,13 +64,14 @@ items:
   nameWithType: NSModuleLicenseLink.GetAssigned()
   fullName: CRMScript.NetServer.NSModuleLicenseLink.GetAssigned()
   type: Method
-  summary: "\nIs the module license assigned to a given user\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: Bool GetAssigned()
     parameters: []
     return:
       type: CRMScript.Global.Bool
+      description: Is the module license assigned to a given user
   example: 
   - "\n<pre><code>NSModuleLicenseLink thing;\nBool assigned = thing.GetAssigned();</code></pre>\n"
 - uid: CRMScript.NetServer.NSModuleLicenseLink.GetCanAssign()
@@ -68,13 +84,14 @@ items:
   nameWithType: NSModuleLicenseLink.GetCanAssign()
   fullName: CRMScript.NetServer.NSModuleLicenseLink.GetCanAssign()
   type: Method
-  summary: "\nCan a specific user assign this module license\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: Bool GetCanAssign()
     parameters: []
     return:
       type: CRMScript.Global.Bool
+      description: Can a specific user assign this module license
   example: 
   - "\n<pre><code>NSModuleLicenseLink thing;\nBool canAssign = thing.GetCanAssign();</code></pre>\n"
 - uid: CRMScript.NetServer.NSModuleLicenseLink.GetDescription()
@@ -87,13 +104,14 @@ items:
   nameWithType: NSModuleLicenseLink.GetDescription()
   fullName: CRMScript.NetServer.NSModuleLicenseLink.GetDescription()
   type: Method
-  summary: "\nThe description of the module license\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: String GetDescription()
     parameters: []
     return:
       type: CRMScript.Global.String
+      description: The description of the module license
   example: 
   - "\n<pre><code>NSModuleLicenseLink thing;\nString description = thing.GetDescription();</code></pre>\n"
 - uid: CRMScript.NetServer.NSModuleLicenseLink.GetFree()
@@ -106,13 +124,14 @@ items:
   nameWithType: NSModuleLicenseLink.GetFree()
   fullName: CRMScript.NetServer.NSModuleLicenseLink.GetFree()
   type: Method
-  summary: "\nThe number of licenses that are free to be assigned\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: Integer GetFree()
     parameters: []
     return:
       type: CRMScript.Global.Integer
+      description: The number of licenses that are free to be assigned
   example: 
   - "\n<pre><code>NSModuleLicenseLink thing;\nInteger free = thing.GetFree();</code></pre>\n"
 - uid: CRMScript.NetServer.NSModuleLicenseLink.GetInUse()
@@ -125,13 +144,14 @@ items:
   nameWithType: NSModuleLicenseLink.GetInUse()
   fullName: CRMScript.NetServer.NSModuleLicenseLink.GetInUse()
   type: Method
-  summary: "\nThe total number of licenses (of a given license module) that are occupied\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: Integer GetInUse()
     parameters: []
     return:
       type: CRMScript.Global.Integer
+      description: The total number of licenses (of a given license module) that are occupied
   example: 
   - "\n<pre><code>NSModuleLicenseLink thing;\nInteger inUse = thing.GetInUse();</code></pre>\n"
 - uid: CRMScript.NetServer.NSModuleLicenseLink.GetIsHidden()
@@ -144,13 +164,14 @@ items:
   nameWithType: NSModuleLicenseLink.GetIsHidden()
   fullName: CRMScript.NetServer.NSModuleLicenseLink.GetIsHidden()
   type: Method
-  summary: "\nIs hidden from UI\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: Bool GetIsHidden()
     parameters: []
     return:
       type: CRMScript.Global.Bool
+      description: Is hidden from UI
   example: 
   - "\n<pre><code>NSModuleLicenseLink thing;\nBool isHidden = thing.GetIsHidden();</code></pre>\n"
 - uid: CRMScript.NetServer.NSModuleLicenseLink.GetModuleLicenseId()
@@ -163,13 +184,14 @@ items:
   nameWithType: NSModuleLicenseLink.GetModuleLicenseId()
   fullName: CRMScript.NetServer.NSModuleLicenseLink.GetModuleLicenseId()
   type: Method
-  summary: "\nThe identifier of the module license\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: Integer GetModuleLicenseId()
     parameters: []
     return:
       type: CRMScript.Global.Integer
+      description: The identifier of the module license
   example: 
   - "\n<pre><code>NSModuleLicenseLink thing;\nInteger moduleLicenseId = thing.GetModuleLicenseId();</code></pre>\n"
 - uid: CRMScript.NetServer.NSModuleLicenseLink.GetName()
@@ -182,13 +204,14 @@ items:
   nameWithType: NSModuleLicenseLink.GetName()
   fullName: CRMScript.NetServer.NSModuleLicenseLink.GetName()
   type: Method
-  summary: "\nThe name of the module license\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: String GetName()
     parameters: []
     return:
       type: CRMScript.Global.String
+      description: The name of the module license
   example: 
   - "\n<pre><code>NSModuleLicenseLink thing;\nString name = thing.GetName();</code></pre>\n"
 - uid: CRMScript.NetServer.NSModuleLicenseLink.GetPrerequisiteModuleName()
@@ -239,13 +262,14 @@ items:
   nameWithType: NSModuleLicenseLink.GetTooltip()
   fullName: CRMScript.NetServer.NSModuleLicenseLink.GetTooltip()
   type: Method
-  summary: "\nThe tooltip to be shown in some gui with details on the module license\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: String GetTooltip()
     parameters: []
     return:
       type: CRMScript.Global.String
+      description: The tooltip to be shown in some gui with details on the module license
   example: 
   - "\n<pre><code>NSModuleLicenseLink thing;\nString tooltip = thing.GetTooltip();</code></pre>\n"
 - uid: CRMScript.NetServer.NSModuleLicenseLink.GetTotal()
@@ -258,13 +282,14 @@ items:
   nameWithType: NSModuleLicenseLink.GetTotal()
   fullName: CRMScript.NetServer.NSModuleLicenseLink.GetTotal()
   type: Method
-  summary: "\nThe total number of module licenses. In other words the number of free license added to the number of licenses in use equals the total number of licenses\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: Integer GetTotal()
     parameters: []
     return:
       type: CRMScript.Global.Integer
+      description: The total number of module licenses. In other words the number of free license added to the number of licenses in use equals the total number of licenses
   example: 
   - "\n<pre><code>NSModuleLicenseLink thing;\nInteger total = thing.GetTotal();</code></pre>\n"
 - uid: CRMScript.NetServer.NSModuleLicenseLink.GetUnrestricted()
@@ -277,30 +302,16 @@ items:
   nameWithType: NSModuleLicenseLink.GetUnrestricted()
   fullName: CRMScript.NetServer.NSModuleLicenseLink.GetUnrestricted()
   type: Method
-  summary: "\nIs this module license restricted or unrestricted\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: Bool GetUnrestricted()
     parameters: []
     return:
       type: CRMScript.Global.Bool
+      description: Is this module license restricted or unrestricted
   example: 
   - "\n<pre><code>NSModuleLicenseLink thing;\nBool unrestricted = thing.GetUnrestricted();</code></pre>\n"
-- uid: CRMScript.NetServer.NSModuleLicenseLink.#ctor
-  commentId: M:CRMScript.NetServer.NSModuleLicenseLink.#ctor
-  id: '#ctor'
-  so.intellisense: Void.NSModuleLicenseLink
-  langs:
-  - crmscript
-  name: '#ctor'
-  nameWithType: NSModuleLicenseLink.#ctor
-  fullName: CRMScript.NetServer.NSModuleLicenseLink.#ctor
-  type: Constructor
-  summary: 
-  remarks: 
-  syntax: 
-    content: NSModuleLicenseLink
-  example: 
 - uid: CRMScript.NetServer.NSModuleLicenseLink.SetAssigned(Bool)
   commentId: M:CRMScript.NetServer.NSModuleLicenseLink.SetAssigned(Bool)
   id: 'SetAssigned(Bool)'
@@ -311,14 +322,14 @@ items:
   nameWithType: NSModuleLicenseLink.SetAssigned(Bool)
   fullName: CRMScript.NetServer.NSModuleLicenseLink.SetAssigned(Bool)
   type: Method
-  summary: "\nIs the module license assigned to a given user\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: Void SetAssigned(Bool assigned)
     parameters:
     - id: assigned
       type: CRMScript.Global.Bool
-      description: 
+      description: Is the module license assigned to a given user
     return:
       type: CRMScript.Global.Void
   example: 
@@ -333,14 +344,14 @@ items:
   nameWithType: NSModuleLicenseLink.SetCanAssign(Bool)
   fullName: CRMScript.NetServer.NSModuleLicenseLink.SetCanAssign(Bool)
   type: Method
-  summary: "\nCan a specific user assign this module license\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: Void SetCanAssign(Bool canAssign)
     parameters:
     - id: canAssign
       type: CRMScript.Global.Bool
-      description: 
+      description: Can a specific user assign this module license
     return:
       type: CRMScript.Global.Void
   example: 
@@ -355,14 +366,14 @@ items:
   nameWithType: NSModuleLicenseLink.SetDescription(String)
   fullName: CRMScript.NetServer.NSModuleLicenseLink.SetDescription(String)
   type: Method
-  summary: "\nThe description of the module license\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: Void SetDescription(String description)
     parameters:
     - id: description
       type: CRMScript.Global.String
-      description: 
+      description: The description of the module license
     return:
       type: CRMScript.Global.Void
   example: 
@@ -377,14 +388,14 @@ items:
   nameWithType: NSModuleLicenseLink.SetFree(Integer)
   fullName: CRMScript.NetServer.NSModuleLicenseLink.SetFree(Integer)
   type: Method
-  summary: "\nThe number of licenses that are free to be assigned\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: Void SetFree(Integer free)
     parameters:
     - id: free
       type: CRMScript.Global.Integer
-      description: 
+      description: The number of licenses that are free to be assigned
     return:
       type: CRMScript.Global.Void
   example: 
@@ -399,14 +410,14 @@ items:
   nameWithType: NSModuleLicenseLink.SetInUse(Integer)
   fullName: CRMScript.NetServer.NSModuleLicenseLink.SetInUse(Integer)
   type: Method
-  summary: "\nThe total number of licenses (of a given license module) that are occupied\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: Void SetInUse(Integer inUse)
     parameters:
     - id: inUse
       type: CRMScript.Global.Integer
-      description: 
+      description: The total number of licenses (of a given license module) that are occupied
     return:
       type: CRMScript.Global.Void
   example: 
@@ -421,14 +432,14 @@ items:
   nameWithType: NSModuleLicenseLink.SetIsHidden(Bool)
   fullName: CRMScript.NetServer.NSModuleLicenseLink.SetIsHidden(Bool)
   type: Method
-  summary: "\nIs hidden from UI\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: Void SetIsHidden(Bool isHidden)
     parameters:
     - id: isHidden
       type: CRMScript.Global.Bool
-      description: 
+      description: Is hidden from UI
     return:
       type: CRMScript.Global.Void
   example: 
@@ -443,14 +454,14 @@ items:
   nameWithType: NSModuleLicenseLink.SetModuleLicenseId(Integer)
   fullName: CRMScript.NetServer.NSModuleLicenseLink.SetModuleLicenseId(Integer)
   type: Method
-  summary: "\nThe identifier of the module license\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: Void SetModuleLicenseId(Integer moduleLicenseId)
     parameters:
     - id: moduleLicenseId
       type: CRMScript.Global.Integer
-      description: 
+      description: The identifier of the module license
     return:
       type: CRMScript.Global.Void
   example: 
@@ -465,14 +476,14 @@ items:
   nameWithType: NSModuleLicenseLink.SetName(String)
   fullName: CRMScript.NetServer.NSModuleLicenseLink.SetName(String)
   type: Method
-  summary: "\nThe name of the module license\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: Void SetName(String name)
     parameters:
     - id: name
       type: CRMScript.Global.String
-      description: 
+      description: The name of the module license
     return:
       type: CRMScript.Global.Void
   example: 
@@ -531,14 +542,14 @@ items:
   nameWithType: NSModuleLicenseLink.SetTooltip(String)
   fullName: CRMScript.NetServer.NSModuleLicenseLink.SetTooltip(String)
   type: Method
-  summary: "\nThe tooltip to be shown in some gui with details on the module license\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: Void SetTooltip(String tooltip)
     parameters:
     - id: tooltip
       type: CRMScript.Global.String
-      description: 
+      description: The tooltip to be shown in some gui with details on the module license
     return:
       type: CRMScript.Global.Void
   example: 
@@ -553,14 +564,14 @@ items:
   nameWithType: NSModuleLicenseLink.SetTotal(Integer)
   fullName: CRMScript.NetServer.NSModuleLicenseLink.SetTotal(Integer)
   type: Method
-  summary: "\nThe total number of module licenses. In other words the number of free license added to the number of licenses in use equals the total number of licenses\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: Void SetTotal(Integer total)
     parameters:
     - id: total
       type: CRMScript.Global.Integer
-      description: 
+      description: The total number of module licenses. In other words the number of free license added to the number of licenses in use equals the total number of licenses
     return:
       type: CRMScript.Global.Void
   example: 
@@ -575,14 +586,14 @@ items:
   nameWithType: NSModuleLicenseLink.SetUnrestricted(Bool)
   fullName: CRMScript.NetServer.NSModuleLicenseLink.SetUnrestricted(Bool)
   type: Method
-  summary: "\nIs this module license restricted or unrestricted\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: Void SetUnrestricted(Bool unrestricted)
     parameters:
     - id: unrestricted
       type: CRMScript.Global.Bool
-      description: 
+      description: Is this module license restricted or unrestricted
     return:
       type: CRMScript.Global.Void
   example: 
