--- a/docs/api-reference/CRMScript.NetServer.NSMrMrs.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSMrMrs.yml
@@ -6,10 +6,10 @@ items:
   langs:
   - crmscript
   children:
+  - CRMScript.NetServer.NSMrMrs.#ctor
   - CRMScript.NetServer.NSMrMrs.GetId()
   - CRMScript.NetServer.NSMrMrs.GetTooltip()
   - CRMScript.NetServer.NSMrMrs.GetValue()
-  - CRMScript.NetServer.NSMrMrs.#ctor
   - CRMScript.NetServer.NSMrMrs.SetId(Integer)
   - CRMScript.NetServer.NSMrMrs.SetTooltip(String)
   - CRMScript.NetServer.NSMrMrs.SetValue(String)
@@ -19,63 +19,6 @@ items:
   type: Class
   summary: 
   example: 
-- uid: CRMScript.NetServer.NSMrMrs.GetId()
-  commentId: M:CRMScript.NetServer.NSMrMrs.GetId()
-  id: 'GetId()'
-  so.intellisense: NSMrMrs.GetId
-  langs:
-  - crmscript
-  name: 'GetId()'
-  nameWithType: NSMrMrs.GetId()
-  fullName: CRMScript.NetServer.NSMrMrs.GetId()
-  type: Method
-  summary: "\nGets the primary key (ID) for the NSMrMrs<p></p>\n<strong>Returns:</strong>Integer NSMrMrs id.<p></p>\n<pre><code>NSMrMrs thing;\nInteger id = thing.GetId();</code></pre>\n"
-  remarks: 
-  syntax: 
-    content: Integer GetId()
-    parameters: []
-    return:
-      type: CRMScript.Global.Integer
-  example: 
-  - "\n<pre><code>NSMrMrs thing;\nInteger id = thing.GetId();</code></pre>\n"
-- uid: CRMScript.NetServer.NSMrMrs.GetTooltip()
-  commentId: M:CRMScript.NetServer.NSMrMrs.GetTooltip()
-  id: 'GetTooltip()'
-  so.intellisense: NSMrMrs.GetTooltip
-  langs:
-  - crmscript
-  name: 'GetTooltip()'
-  nameWithType: NSMrMrs.GetTooltip()
-  fullName: CRMScript.NetServer.NSMrMrs.GetTooltip()
-  type: Method
-  summary: "\nGets the tooltip description for the NSMrMrs list item.<p></p>\n<strong>Returns:</strong>String NSMrMrs tooltip description.<p></p>\n<pre><code>NSMrMrs thing;\nString descr = thing.GetTooltip();</code></pre>\n"
-  remarks: 
-  syntax: 
-    content: String GetTooltip()
-    parameters: []
-    return:
-      type: CRMScript.Global.String
-  example: 
-  - "\n<pre><code>NSMrMrs thing;\nString descr = thing.GetTooltip();</code></pre>\n"
-- uid: CRMScript.NetServer.NSMrMrs.GetValue()
-  commentId: M:CRMScript.NetServer.NSMrMrs.GetValue()
-  id: 'GetValue()'
-  so.intellisense: NSMrMrs.GetValue
-  langs:
-  - crmscript
-  name: 'GetValue()'
-  nameWithType: NSMrMrs.GetValue()
-  fullName: CRMScript.NetServer.NSMrMrs.GetValue()
-  type: Method
-  summary: "\nGets the name of the NSMrMrs.<p></p>\n<strong>Returns:</strong>String NSMrMrs name.<p></p>\n<pre><code>NSMrMrs thing;\nString name = thing.GetValue();</code></pre>\n"
-  remarks: 
-  syntax: 
-    content: String GetValue()
-    parameters: []
-    return:
-      type: CRMScript.Global.String
-  example: 
-  - "\n<pre><code>NSMrMrs thing;\nString name = thing.GetValue();</code></pre>\n"
 - uid: CRMScript.NetServer.NSMrMrs.#ctor
   commentId: M:CRMScript.NetServer.NSMrMrs.#ctor
   id: '#ctor'
@@ -91,6 +34,66 @@ items:
   syntax: 
     content: NSMrMrs
   example: 
+- uid: CRMScript.NetServer.NSMrMrs.GetId()
+  commentId: M:CRMScript.NetServer.NSMrMrs.GetId()
+  id: 'GetId()'
+  so.intellisense: NSMrMrs.GetId
+  langs:
+  - crmscript
+  name: 'GetId()'
+  nameWithType: NSMrMrs.GetId()
+  fullName: CRMScript.NetServer.NSMrMrs.GetId()
+  type: Method
+  summary: "\nGets the primary key (ID) for the NSMrMrs\n"
+  remarks: 
+  syntax: 
+    content: Integer GetId()
+    parameters: []
+    return:
+      type: CRMScript.Global.Integer
+      description: NSMrMrs ID
+  example: 
+  - "\n<pre><code>NSMrMrs thing;\nInteger id = thing.GetId();</code></pre>\n"
+- uid: CRMScript.NetServer.NSMrMrs.GetTooltip()
+  commentId: M:CRMScript.NetServer.NSMrMrs.GetTooltip()
+  id: 'GetTooltip()'
+  so.intellisense: NSMrMrs.GetTooltip
+  langs:
+  - crmscript
+  name: 'GetTooltip()'
+  nameWithType: NSMrMrs.GetTooltip()
+  fullName: CRMScript.NetServer.NSMrMrs.GetTooltip()
+  type: Method
+  summary: "\nGets the tooltip description for the NSMrMrs list item.\n"
+  remarks: 
+  syntax: 
+    content: String GetTooltip()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: NSMrMrs tooltip description
+  example: 
+  - "\n<pre><code>NSMrMrs thing;\nString descr = thing.GetTooltip();</code></pre>\n"
+- uid: CRMScript.NetServer.NSMrMrs.GetValue()
+  commentId: M:CRMScript.NetServer.NSMrMrs.GetValue()
+  id: 'GetValue()'
+  so.intellisense: NSMrMrs.GetValue
+  langs:
+  - crmscript
+  name: 'GetValue()'
+  nameWithType: NSMrMrs.GetValue()
+  fullName: CRMScript.NetServer.NSMrMrs.GetValue()
+  type: Method
+  summary: "\nGets the name of the NSMrMrs.\n"
+  remarks: 
+  syntax: 
+    content: String GetValue()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: NSMrMrs name.
+  example: 
+  - "\n<pre><code>NSMrMrs thing;\nString name = thing.GetValue();</code></pre>\n"
 - uid: CRMScript.NetServer.NSMrMrs.SetId(Integer)
   commentId: M:CRMScript.NetServer.NSMrMrs.SetId(Integer)
   id: 'SetId(Integer)'
