--- a/docs/api-reference/CRMScript.NetServer.NSNavigatorAgent.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSNavigatorAgent.yml
@@ -6,15 +6,31 @@ items:
   langs:
   - crmscript
   children:
+  - CRMScript.NetServer.NSNavigatorAgent.#ctor
   - CRMScript.NetServer.NSNavigatorAgent.GetNavigatorCompanies(String)
   - CRMScript.NetServer.NSNavigatorAgent.GetNavigatorCompany(Integer)
   - CRMScript.NetServer.NSNavigatorAgent.GetNavigatorCompanyList(Integer[])
-  - CRMScript.NetServer.NSNavigatorAgent.#ctor
   name: NSNavigatorAgent
   nameWithType: NSNavigatorAgent
   fullName: CRMScript.NetServer.NSNavigatorAgent
   type: Class
   summary: "\nNavigator stuff.\n"
+  example: 
+  - "\n<pre><code>NSNavigatorAgent agent;\nagent.callMethod(arg1, arg2);</code></pre>\n"
+- uid: CRMScript.NetServer.NSNavigatorAgent.#ctor
+  commentId: M:CRMScript.NetServer.NSNavigatorAgent.#ctor
+  id: '#ctor'
+  so.intellisense: Void.NSNavigatorAgent
+  langs:
+  - crmscript
+  name: '#ctor'
+  nameWithType: NSNavigatorAgent.#ctor
+  fullName: CRMScript.NetServer.NSNavigatorAgent.#ctor
+  type: Constructor
+  summary: "\nNavigator stuff.\n"
+  remarks: 
+  syntax: 
+    content: NSNavigatorAgent
   example: 
   - "\n<pre><code>NSNavigatorAgent agent;\nagent.callMethod(arg1, arg2);</code></pre>\n"
 - uid: CRMScript.NetServer.NSNavigatorAgent.GetNavigatorCompanies(String)
@@ -27,7 +43,7 @@ items:
   nameWithType: NSNavigatorAgent.GetNavigatorCompanies(String)
   fullName: CRMScript.NetServer.NSNavigatorAgent.GetNavigatorCompanies(String)
   type: Method
-  summary: "\n<strong>Returns:</strong>NSNavigatorCompany[]\n"
+  summary: ""
   remarks: 
   syntax: 
     content: NSNavigatorCompany[] GetNavigatorCompanies(String name)
@@ -83,22 +99,6 @@ items:
       type: CRMScript.NetServer.NSNavigatorCompany[]
   example: 
   - "\n<pre><code>Integer[] ids;\nNSNavigatorAgent agent;\nagent.GetNavigatorCompanyList(ids);</code></pre>\n"
-- uid: CRMScript.NetServer.NSNavigatorAgent.#ctor
-  commentId: M:CRMScript.NetServer.NSNavigatorAgent.#ctor
-  id: '#ctor'
-  so.intellisense: Void.NSNavigatorAgent
-  langs:
-  - crmscript
-  name: '#ctor'
-  nameWithType: NSNavigatorAgent.#ctor
-  fullName: CRMScript.NetServer.NSNavigatorAgent.#ctor
-  type: Constructor
-  summary: "\nNavigator stuff.\n"
-  remarks: 
-  syntax: 
-    content: NSNavigatorAgent
-  example: 
-  - "\n<pre><code>NSNavigatorAgent agent;\nagent.callMethod(arg1, arg2);</code></pre>\n"
 references:
 - uid: CRMScript.NetServer.NSNavigatorAgent
   commentId: T:CRMScript.NetServer.NSNavigatorAgent
