--- a/docs/api-reference/CRMScript.NetServer.NSOutgoingMessage.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSOutgoingMessage.yml
@@ -6,13 +6,13 @@ items:
   langs:
   - crmscript
   children:
+  - CRMScript.NetServer.NSOutgoingMessage.#ctor
   - CRMScript.NetServer.NSOutgoingMessage.GetContent()
   - CRMScript.NetServer.NSOutgoingMessage.GetFormat()
   - CRMScript.NetServer.NSOutgoingMessage.GetFrom()
   - CRMScript.NetServer.NSOutgoingMessage.GetParentMessagingId()
   - CRMScript.NetServer.NSOutgoingMessage.GetSuggestedSessionKey()
   - CRMScript.NetServer.NSOutgoingMessage.GetTo()
-  - CRMScript.NetServer.NSOutgoingMessage.#ctor
   - CRMScript.NetServer.NSOutgoingMessage.SetContent(String)
   - CRMScript.NetServer.NSOutgoingMessage.SetFormat(String)
   - CRMScript.NetServer.NSOutgoingMessage.SetFrom(String)
@@ -25,6 +25,21 @@ items:
   type: Class
   summary: 
   example: 
+- uid: CRMScript.NetServer.NSOutgoingMessage.#ctor
+  commentId: M:CRMScript.NetServer.NSOutgoingMessage.#ctor
+  id: '#ctor'
+  so.intellisense: Void.NSOutgoingMessage
+  langs:
+  - crmscript
+  name: '#ctor'
+  nameWithType: NSOutgoingMessage.#ctor
+  fullName: CRMScript.NetServer.NSOutgoingMessage.#ctor
+  type: Constructor
+  summary: 
+  remarks: 
+  syntax: 
+    content: NSOutgoingMessage
+  example: 
 - uid: CRMScript.NetServer.NSOutgoingMessage.GetContent()
   commentId: M:CRMScript.NetServer.NSOutgoingMessage.GetContent()
   id: 'GetContent()'
@@ -35,13 +50,14 @@ items:
   nameWithType: NSOutgoingMessage.GetContent()
   fullName: CRMScript.NetServer.NSOutgoingMessage.GetContent()
   type: Method
-  summary: "\nContent, or body, of the message.\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: String GetContent()
     parameters: []
     return:
       type: CRMScript.Global.String
+      description: Content, or body, of the message.
   example: 
   - "\n<pre><code>NSOutgoingMessage thing;\nString content = thing.GetContent();</code></pre>\n"
 - uid: CRMScript.NetServer.NSOutgoingMessage.GetFormat()
@@ -54,13 +70,14 @@ items:
   nameWithType: NSOutgoingMessage.GetFormat()
   fullName: CRMScript.NetServer.NSOutgoingMessage.GetFormat()
   type: Method
-  summary: "\nFormat of content\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: String GetFormat()
     parameters: []
     return:
       type: CRMScript.Global.String
+      description: Format of content
   example: 
   - "\n<pre><code>NSOutgoingMessage thing;\nString format = thing.GetFormat();</code></pre>\n"
 - uid: CRMScript.NetServer.NSOutgoingMessage.GetFrom()
@@ -73,13 +90,14 @@ items:
   nameWithType: NSOutgoingMessage.GetFrom()
   fullName: CRMScript.NetServer.NSOutgoingMessage.GetFrom()
   type: Method
-  summary: "\nWho the message is from.  This can vary from provider to provider and can for SMS typically be a phone number or a string.  This is mail address on the form of an e-mail.\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: String GetFrom()
     parameters: []
     return:
       type: CRMScript.Global.String
+      description: Who the message is from.  This can vary from provider to provider and can for SMS typically be a phone number or a string.  This is mail address on the form of an e-mail.
   example: 
   - "\n<pre><code>NSOutgoingMessage thing;\nString from = thing.GetFrom();</code></pre>\n"
 - uid: CRMScript.NetServer.NSOutgoingMessage.GetParentMessagingId()
@@ -92,13 +110,14 @@ items:
   nameWithType: NSOutgoingMessage.GetParentMessagingId()
   fullName: CRMScript.NetServer.NSOutgoingMessage.GetParentMessagingId()
   type: Method
-  summary: "\nId to the previous outgoing message related to this one. Used from message threading.\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: Integer GetParentMessagingId()
     parameters: []
     return:
       type: CRMScript.Global.Integer
+      description: ID to the previous outgoing message related to this one. Used from message threading.
   example: 
   - "\n<pre><code>NSOutgoingMessage thing;\nInteger parentMessagingId = thing.GetParentMessagingId();</code></pre>\n"
 - uid: CRMScript.NetServer.NSOutgoingMessage.GetSuggestedSessionKey()
@@ -130,30 +149,16 @@ items:
   nameWithType: NSOutgoingMessage.GetTo()
   fullName: CRMScript.NetServer.NSOutgoingMessage.GetTo()
   type: Method
-  summary: "\nAddress of the recipient. This can be in the form of phone number or email.\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: String GetTo()
     parameters: []
     return:
       type: CRMScript.Global.String
+      description: Address of the recipient. This can be in the form of phone number or email.
   example: 
   - "\n<pre><code>NSOutgoingMessage thing;\nString to = thing.GetTo();</code></pre>\n"
-- uid: CRMScript.NetServer.NSOutgoingMessage.#ctor
-  commentId: M:CRMScript.NetServer.NSOutgoingMessage.#ctor
-  id: '#ctor'
-  so.intellisense: Void.NSOutgoingMessage
-  langs:
-  - crmscript
-  name: '#ctor'
-  nameWithType: NSOutgoingMessage.#ctor
-  fullName: CRMScript.NetServer.NSOutgoingMessage.#ctor
-  type: Constructor
-  summary: 
-  remarks: 
-  syntax: 
-    content: NSOutgoingMessage
-  example: 
 - uid: CRMScript.NetServer.NSOutgoingMessage.SetContent(String)
   commentId: M:CRMScript.NetServer.NSOutgoingMessage.SetContent(String)
   id: 'SetContent(String)'
@@ -164,14 +169,14 @@ items:
   nameWithType: NSOutgoingMessage.SetContent(String)
   fullName: CRMScript.NetServer.NSOutgoingMessage.SetContent(String)
   type: Method
-  summary: "\nContent, or body, of the message.\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: Void SetContent(String content)
     parameters:
     - id: content
       type: CRMScript.Global.String
-      description: 
+      description: Content, or body, of the message.
     return:
       type: CRMScript.Global.Void
   example: 
@@ -186,14 +191,14 @@ items:
   nameWithType: NSOutgoingMessage.SetFormat(String)
   fullName: CRMScript.NetServer.NSOutgoingMessage.SetFormat(String)
   type: Method
-  summary: "\nFormat of content\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: Void SetFormat(String format)
     parameters:
     - id: format
       type: CRMScript.Global.String
-      description: 
+      description: Format of content
     return:
       type: CRMScript.Global.Void
   example: 
@@ -208,14 +213,14 @@ items:
   nameWithType: NSOutgoingMessage.SetFrom(String)
   fullName: CRMScript.NetServer.NSOutgoingMessage.SetFrom(String)
   type: Method
-  summary: "\nWho the message is from.  This can vary from provider to provider and can for SMS typically be a phone number or a string.  This is mail address on the form of an e-mail.\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: Void SetFrom(String from)
     parameters:
     - id: from
       type: CRMScript.Global.String
-      description: 
+      description: Who the message is from.  This can vary from provider to provider and can for SMS typically be a phone number or a string.  This is mail address on the form of an email.
     return:
       type: CRMScript.Global.Void
   example: 
@@ -230,14 +235,14 @@ items:
   nameWithType: NSOutgoingMessage.SetParentMessagingId(Integer)
   fullName: CRMScript.NetServer.NSOutgoingMessage.SetParentMessagingId(Integer)
   type: Method
-  summary: "\nId to the previous outgoing message related to this one. Used from message threading.\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: Void SetParentMessagingId(Integer parentMessagingId)
     parameters:
     - id: parentMessagingId
       type: CRMScript.Global.Integer
-      description: 
+      description: ID to the previous outgoing message related to this one. Used from message threading.
     return:
       type: CRMScript.Global.Void
   example: 
@@ -274,14 +279,14 @@ items:
   nameWithType: NSOutgoingMessage.SetTo(String)
   fullName: CRMScript.NetServer.NSOutgoingMessage.SetTo(String)
   type: Method
-  summary: "\nAddress of the recipient. This can be in the form of phone number or email.\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: Void SetTo(String to)
     parameters:
     - id: to
       type: CRMScript.Global.String
-      description: 
+      description: Address of the recipient. This can be in the form of phone number or email.
     return:
       type: CRMScript.Global.Void
   example: 
