--- a/docs/api-reference/CRMScript.NetServer.NSMessagingAgent.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSMessagingAgent.yml
@@ -6,11 +6,11 @@ items:
   langs:
   - crmscript
   children:
-  - CRMScript.NetServer.NSMessagingAgent.CreateMessage()
+  - CRMScript.NetServer.NSMessagingAgent.#ctor
+  - CRMScript.NetServer.NSMessagingAgent.CreateMessage(NSIncomingMessage)
   - CRMScript.NetServer.NSMessagingAgent.GetDeliveryStatus(Integer[])
   - CRMScript.NetServer.NSMessagingAgent.GetPlugins()
-  - CRMScript.NetServer.NSMessagingAgent.#ctor
-  - CRMScript.NetServer.NSMessagingAgent.SendMessages(String)
+  - CRMScript.NetServer.NSMessagingAgent.SendMessages(String,NSOutgoingMessage[])
   - CRMScript.NetServer.NSMessagingAgent.SendMessagesWithConfig(String)
   - CRMScript.NetServer.NSMessagingAgent.SetDeliveryStatus(String,String,Integer,String)
   name: NSMessagingAgent
@@ -20,21 +20,40 @@ items:
   summary: "\nSMS and other external messaging systems.\n"
   example: 
   - "\n<pre><code>NSMessagingAgent agent;\nagent.callMethod(arg1, arg2);</code></pre>\n"
-- uid: CRMScript.NetServer.NSMessagingAgent.CreateMessage()
-  commentId: M:CRMScript.NetServer.NSMessagingAgent.CreateMessage()
-  id: 'CreateMessage()'
+- uid: CRMScript.NetServer.NSMessagingAgent.#ctor
+  commentId: M:CRMScript.NetServer.NSMessagingAgent.#ctor
+  id: '#ctor'
+  so.intellisense: Void.NSMessagingAgent
+  langs:
+  - crmscript
+  name: '#ctor'
+  nameWithType: NSMessagingAgent.#ctor
+  fullName: CRMScript.NetServer.NSMessagingAgent.#ctor
+  type: Constructor
+  summary: "\nSMS and other external messaging systems.\n"
+  remarks: 
+  syntax: 
+    content: NSMessagingAgent
+  example: 
+  - "\n<pre><code>NSMessagingAgent agent;\nagent.callMethod(arg1, arg2);</code></pre>\n"
+- uid: CRMScript.NetServer.NSMessagingAgent.CreateMessage(NSIncomingMessage)
+  commentId: M:CRMScript.NetServer.NSMessagingAgent.CreateMessage(NSIncomingMessage)
+  id: 'CreateMessage(NSIncomingMessage)'
   so.intellisense: NSMessagingAgent.CreateMessage
   langs:
   - crmscript
-  name: 'CreateMessage()'
-  nameWithType: NSMessagingAgent.CreateMessage()
-  fullName: CRMScript.NetServer.NSMessagingAgent.CreateMessage()
+  name: 'CreateMessage(NSIncomingMessage)'
+  nameWithType: NSMessagingAgent.CreateMessage(NSIncomingMessage)
+  fullName: CRMScript.NetServer.NSMessagingAgent.CreateMessage(NSIncomingMessage)
   type: Method
   summary: "\nCreates a new message and insert it in the message queue. (inbox)\n"
   remarks: 
   syntax: 
-    content: Void CreateMessage(IncomingMessage incomingMessage)
+    content: Void CreateMessage(NSIncomingMessage incomingMessage)
     parameters:
+    - id: incomingMessage
+      type: CRMScript.NetServer.NSIncomingMessage
+      description:
     return:
       type: CRMScript.Global.Void
   example: 
@@ -77,39 +96,26 @@ items:
     return:
       type: CRMScript.Native.ProviderInfo[]
   example: 
-- uid: CRMScript.NetServer.NSMessagingAgent.#ctor
-  commentId: M:CRMScript.NetServer.NSMessagingAgent.#ctor
-  id: '#ctor'
-  so.intellisense: Void.NSMessagingAgent
-  langs:
-  - crmscript
-  name: '#ctor'
-  nameWithType: NSMessagingAgent.#ctor
-  fullName: CRMScript.NetServer.NSMessagingAgent.#ctor
-  type: Constructor
-  summary: "\nSMS and other external messaging systems.\n"
-  remarks: 
-  syntax: 
-    content: NSMessagingAgent
-  example: 
-  - "\n<pre><code>NSMessagingAgent agent;\nagent.callMethod(arg1, arg2);</code></pre>\n"
-- uid: CRMScript.NetServer.NSMessagingAgent.SendMessages(String)
-  commentId: M:CRMScript.NetServer.NSMessagingAgent.SendMessages(String)
-  id: 'SendMessages(String)'
+- uid: CRMScript.NetServer.NSMessagingAgent.SendMessages(String,NSOutgoingMessage[])
+  commentId: M:CRMScript.NetServer.NSMessagingAgent.SendMessages(String,NSOutgoingMessage[])
+  id: 'SendMessages(String,NSOutgoingMessage[])'
   so.intellisense: NSMessagingAgent.SendMessages
   langs:
   - crmscript
-  name: 'SendMessages(String)'
-  nameWithType: NSMessagingAgent.SendMessages(String)
-  fullName: CRMScript.NetServer.NSMessagingAgent.SendMessages(String)
+  name: 'SendMessages(String,NSOutgoingMessage[])'
+  nameWithType: NSMessagingAgent.SendMessages(String,NSOutgoingMessage[])
+  fullName: CRMScript.NetServer.NSMessagingAgent.SendMessages(String,NSOutgoingMessage[])
   type: Method
-  summary: "\nSend an array of messages\n"
+  summary: "\nSends an array of messages\n"
   remarks: 
   syntax: 
     content: NSMessageDeliveryStatus[] SendMessages(String plugin, NSOutgoingMessage[] outgoingMessages)
     parameters:
     - id: plugin
       type: CRMScript.Global.String
+      description: 
+    - id: outgoingMessages
+      type: CRMScript.NetServer.NSOutgoingMessage[]
       description: 
     return:
       type: CRMScript.NetServer.NSMessageDeliveryStatus[]
@@ -125,7 +131,7 @@ items:
   nameWithType: NSMessagingAgent.SendMessagesWithConfig(String)
   fullName: CRMScript.NetServer.NSMessagingAgent.SendMessagesWithConfig(String)
   type: Method
-  summary: "\nSend an array of messages using given config\n"
+  summary: "\nSends an array of messages using given config\n"
   remarks: 
   syntax: 
     content: NSMessageDeliveryStatus[] SendMessagesWithConfig(String plugin, NSOutgoingMessage[] outgoingMessages, Map config)
@@ -133,6 +139,12 @@ items:
     - id: plugin
       type: CRMScript.Global.String
       description: 
+    - id: outgoingMessages
+      type: CRMScript.NetServer.NSOutgoingMessage[]
+      description: 
+    - id: config
+      type: CRMScript.Global.Map
+      description:
     return:
       type: CRMScript.NetServer.NSMessageDeliveryStatus[]
   example: 
@@ -147,7 +159,7 @@ items:
   nameWithType: NSMessagingAgent.SetDeliveryStatus(String,String,Integer,String)
   fullName: CRMScript.NetServer.NSMessagingAgent.SetDeliveryStatus(String,String,Integer,String)
   type: Method
-  summary: "\nSets or change the delivery status on an outgoing messsage.\n"
+  summary: "\nSets or change the delivery status on an outgoing message.\n"
   remarks: 
   syntax: 
     content: Void SetDeliveryStatus(String plugin, String externalMessageId, Integer status, String statusDescription)
