--- a/docs/api-reference/CRMScript.NetServer.NSNavigatorCompany.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSNavigatorCompany.yml
@@ -6,10 +6,10 @@ items:
   langs:
   - crmscript
   children:
+  - CRMScript.NetServer.NSNavigatorCompany.#ctor
   - CRMScript.NetServer.NSNavigatorCompany.GetId()
   - CRMScript.NetServer.NSNavigatorCompany.GetTooltip()
   - CRMScript.NetServer.NSNavigatorCompany.GetValue()
-  - CRMScript.NetServer.NSNavigatorCompany.#ctor
   - CRMScript.NetServer.NSNavigatorCompany.SetId(Integer)
   - CRMScript.NetServer.NSNavigatorCompany.SetTooltip(String)
   - CRMScript.NetServer.NSNavigatorCompany.SetValue(String)
@@ -19,63 +19,6 @@ items:
   type: Class
   summary: 
   example: 
-- uid: CRMScript.NetServer.NSNavigatorCompany.GetId()
-  commentId: M:CRMScript.NetServer.NSNavigatorCompany.GetId()
-  id: 'GetId()'
-  so.intellisense: NSNavigatorCompany.GetId
-  langs:
-  - crmscript
-  name: 'GetId()'
-  nameWithType: NSNavigatorCompany.GetId()
-  fullName: CRMScript.NetServer.NSNavigatorCompany.GetId()
-  type: Method
-  summary: "\nGets the primary key (ID) for the NSNavigatorCompany<p></p>\n<strong>Returns:</strong>Integer NavigatorCompany id.<p></p>\n<pre><code>NSNavigatorCompany thing;\nInteger id = thing.GetId();</code></pre>\n"
-  remarks: 
-  syntax: 
-    content: Integer GetId()
-    parameters: []
-    return:
-      type: CRMScript.Global.Integer
-  example: 
-  - "\n<pre><code>NSNavigatorCompany thing;\nInteger id = thing.GetId();</code></pre>\n"
-- uid: CRMScript.NetServer.NSNavigatorCompany.GetTooltip()
-  commentId: M:CRMScript.NetServer.NSNavigatorCompany.GetTooltip()
-  id: 'GetTooltip()'
-  so.intellisense: NSNavigatorCompany.GetTooltip
-  langs:
-  - crmscript
-  name: 'GetTooltip()'
-  nameWithType: NSNavigatorCompany.GetTooltip()
-  fullName: CRMScript.NetServer.NSNavigatorCompany.GetTooltip()
-  type: Method
-  summary: "\nGets the tooltip description for the NSNavigatorCompany list item.<p></p>\n<strong>Returns:</strong>String NSNavigatorCompany tooltip description.<p></p>\n<pre><code>NSNavigatorCompany thing;\nString descr = thing.GetTooltip();</code></pre>\n"
-  remarks: 
-  syntax: 
-    content: String GetTooltip()
-    parameters: []
-    return:
-      type: CRMScript.Global.String
-  example: 
-  - "\n<pre><code>NSNavigatorCompany thing;\nString descr = thing.GetTooltip();</code></pre>\n"
-- uid: CRMScript.NetServer.NSNavigatorCompany.GetValue()
-  commentId: M:CRMScript.NetServer.NSNavigatorCompany.GetValue()
-  id: 'GetValue()'
-  so.intellisense: NSNavigatorCompany.GetValue
-  langs:
-  - crmscript
-  name: 'GetValue()'
-  nameWithType: NSNavigatorCompany.GetValue()
-  fullName: CRMScript.NetServer.NSNavigatorCompany.GetValue()
-  type: Method
-  summary: "\nGets the name of the NSNavigatorCompany.<p></p>\n<strong>Returns:</strong>String NavigatorCompany name.<p></p>\n<pre><code>NSNavigatorCompany thing;\nString name = thing.GetValue();</code></pre>\n"
-  remarks: 
-  syntax: 
-    content: String GetValue()
-    parameters: []
-    return:
-      type: CRMScript.Global.String
-  example: 
-  - "\n<pre><code>NSNavigatorCompany thing;\nString name = thing.GetValue();</code></pre>\n"
 - uid: CRMScript.NetServer.NSNavigatorCompany.#ctor
   commentId: M:CRMScript.NetServer.NSNavigatorCompany.#ctor
   id: '#ctor'
@@ -91,6 +34,66 @@ items:
   syntax: 
     content: NSNavigatorCompany
   example: 
+- uid: CRMScript.NetServer.NSNavigatorCompany.GetId()
+  commentId: M:CRMScript.NetServer.NSNavigatorCompany.GetId()
+  id: 'GetId()'
+  so.intellisense: NSNavigatorCompany.GetId
+  langs:
+  - crmscript
+  name: 'GetId()'
+  nameWithType: NSNavigatorCompany.GetId()
+  fullName: CRMScript.NetServer.NSNavigatorCompany.GetId()
+  type: Method
+  summary: "\nGets the primary key (ID) for the NSNavigatorCompany\n"
+  remarks: 
+  syntax: 
+    content: Integer GetId()
+    parameters: []
+    return:
+      type: CRMScript.Global.Integer
+      description: NavigatorCompany ID.
+  example: 
+  - "\n<pre><code>NSNavigatorCompany thing;\nInteger id = thing.GetId();</code></pre>\n"
+- uid: CRMScript.NetServer.NSNavigatorCompany.GetTooltip()
+  commentId: M:CRMScript.NetServer.NSNavigatorCompany.GetTooltip()
+  id: 'GetTooltip()'
+  so.intellisense: NSNavigatorCompany.GetTooltip
+  langs:
+  - crmscript
+  name: 'GetTooltip()'
+  nameWithType: NSNavigatorCompany.GetTooltip()
+  fullName: CRMScript.NetServer.NSNavigatorCompany.GetTooltip()
+  type: Method
+  summary: "\nGets the tooltip description for the NSNavigatorCompany list item.\n"
+  remarks: 
+  syntax: 
+    content: String GetTooltip()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: NSNavigatorCompany tooltip description
+  example: 
+  - "\n<pre><code>NSNavigatorCompany thing;\nString descr = thing.GetTooltip();</code></pre>\n"
+- uid: CRMScript.NetServer.NSNavigatorCompany.GetValue()
+  commentId: M:CRMScript.NetServer.NSNavigatorCompany.GetValue()
+  id: 'GetValue()'
+  so.intellisense: NSNavigatorCompany.GetValue
+  langs:
+  - crmscript
+  name: 'GetValue()'
+  nameWithType: NSNavigatorCompany.GetValue()
+  fullName: CRMScript.NetServer.NSNavigatorCompany.GetValue()
+  type: Method
+  summary: "\nGets the name of the NSNavigatorCompany.\n"
+  remarks: 
+  syntax: 
+    content: String GetValue()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: NavigatorCompany name.
+  example: 
+  - "\n<pre><code>NSNavigatorCompany thing;\nString name = thing.GetValue();</code></pre>\n"
 - uid: CRMScript.NetServer.NSNavigatorCompany.SetId(Integer)
   commentId: M:CRMScript.NetServer.NSNavigatorCompany.SetId(Integer)
   id: 'SetId(Integer)'
