--- a/docs/api-reference/CRMScript.NetServer.NSNumberAllocationAgent.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSNumberAllocationAgent.yml
@@ -6,11 +6,11 @@ items:
   langs:
   - crmscript
   children:
+  - CRMScript.NetServer.NSNumberAllocationAgent.#ctor
   - CRMScript.NetServer.NSNumberAllocationAgent.CreateDefaultRefCountEntity()
   - CRMScript.NetServer.NSNumberAllocationAgent.DeleteRefCountEntity(Integer)
   - CRMScript.NetServer.NSNumberAllocationAgent.GetNumberEachTemplate()
   - CRMScript.NetServer.NSNumberAllocationAgent.GetRefCountEntity(Integer)
-  - CRMScript.NetServer.NSNumberAllocationAgent.#ctor
   - CRMScript.NetServer.NSNumberAllocationAgent.SaveDefaultNumbering(RefCountEntity)
   - CRMScript.NetServer.NSNumberAllocationAgent.SaveRefCountEntity(NSRefCountEntity)
   - CRMScript.NetServer.NSNumberAllocationAgent.SetNumberEachTemplate(Bool)
@@ -19,6 +19,22 @@ items:
   fullName: CRMScript.NetServer.NSNumberAllocationAgent
   type: Class
   summary: "\nThis agent can be used to manage number allocation.\n"
+  example: 
+  - "\n<pre><code>NSNumberAllocationAgent agent;\nagent.callMethod(arg1, arg2);</code></pre>\n"
+- uid: CRMScript.NetServer.NSNumberAllocationAgent.#ctor
+  commentId: M:CRMScript.NetServer.NSNumberAllocationAgent.#ctor
+  id: '#ctor'
+  so.intellisense: Void.NSNumberAllocationAgent
+  langs:
+  - crmscript
+  name: '#ctor'
+  nameWithType: NSNumberAllocationAgent.#ctor
+  fullName: CRMScript.NetServer.NSNumberAllocationAgent.#ctor
+  type: Constructor
+  summary: "\nThis agent can be used to manage number allocation.\n"
+  remarks: 
+  syntax: 
+    content: NSNumberAllocationAgent
   example: 
   - "\n<pre><code>NSNumberAllocationAgent agent;\nagent.callMethod(arg1, arg2);</code></pre>\n"
 - uid: CRMScript.NetServer.NSNumberAllocationAgent.CreateDefaultRefCountEntity()
@@ -50,14 +66,14 @@ items:
   nameWithType: NSNumberAllocationAgent.DeleteRefCountEntity(Integer)
   fullName: CRMScript.NetServer.NSNumberAllocationAgent.DeleteRefCountEntity(Integer)
   type: Method
-  summary: "\nDeletes the NSRefCountEntity<p></p>\n<ul><li><strong>RefCountEntityId</strong>The identity of the RefCountEntity to delete.</li></ul><pre><code>NSNumberAllocationAgent agent;\nagent.DeleteRefCountEntity(123);</code></pre>\n"
+  summary: "\nDeletes the NSRefCountEntity\n"
   remarks: 
   syntax: 
     content: DeleteRefCountEntity(Integer refCountEntity)
     parameters:
     - id: refCountEntity
       type: CRMScript.Global.Integer
-      description: 
+      description: The identity of the RefCountEntity to delete.
     return:
       type: CRMScript.Global.Void
   example: 
@@ -91,34 +107,18 @@ items:
   nameWithType: NSNumberAllocationAgent.GetRefCountEntity(Integer)
   fullName: CRMScript.NetServer.NSNumberAllocationAgent.GetRefCountEntity(Integer)
   type: Method
-  summary: "\nGets an NSRefCountEntity object.<p></p>\n<ul><li><strong>RefCountEntityId</strong>The identifier of the NSRefCountEntity object</li></ul>\n"
+  summary: "\nGets an NSRefCountEntity object.\n"
   remarks: 
   syntax: 
     content: NSRefCountEntity GetRefCountEntity(Integer refCountEntityId)
     parameters:
     - id: refCountEntityId
       type: CRMScript.Global.Integer
-      description: 
+      description: The identifier of the NSRefCountEntity object
     return:
       type: CRMScript.NetServer.NSRefCountEntity
   example: 
   - "\n<pre><code>NSNumberAllocationAgent agent;\nNSRefCountEntity thing = agent.GetRefCountEntity(123);</code></pre>\n"
-- uid: CRMScript.NetServer.NSNumberAllocationAgent.#ctor
-  commentId: M:CRMScript.NetServer.NSNumberAllocationAgent.#ctor
-  id: '#ctor'
-  so.intellisense: Void.NSNumberAllocationAgent
-  langs:
-  - crmscript
-  name: '#ctor'
-  nameWithType: NSNumberAllocationAgent.#ctor
-  fullName: CRMScript.NetServer.NSNumberAllocationAgent.#ctor
-  type: Constructor
-  summary: "\nThis agent can be used to manage number allocation.\n"
-  remarks: 
-  syntax: 
-    content: NSNumberAllocationAgent
-  example: 
-  - "\n<pre><code>NSNumberAllocationAgent agent;\nagent.callMethod(arg1, arg2);</code></pre>\n"
 - uid: CRMScript.NetServer.NSNumberAllocationAgent.SaveDefaultNumbering(RefCountEntity)
   commentId: M:CRMScript.NetServer.NSNumberAllocationAgent.SaveDefaultNumbering(RefCountEntity)
   id: 'SaveDefaultNumbering(RefCountEntity)'
@@ -129,14 +129,14 @@ items:
   nameWithType: NSNumberAllocationAgent.SaveDefaultNumbering(RefCountEntity)
   fullName: CRMScript.NetServer.NSNumberAllocationAgent.SaveDefaultNumbering(RefCountEntity)
   type: Method
-  summary: "\nSaves default numbering values in preferences<p></p>\n<ul><li><strong>RefCountEntity</strong>The refCountEntity that holds the values that will be saved</li></ul><pre><code>NSNumberAllocationAgent agent;\nRefCountEntity refCountEntity;\nagent.SaveDefaultNumbering(refCountEntity);</code></pre>\n"
+  summary: "\nSaves default numbering values in preferences\n"
   remarks: 
   syntax: 
     content: Void SaveDefaultNumbering(RefCountEntity refCountEntity)
     parameters:
     - id: refCountEntity
       type: CRMScript.Native.RefCountEntity
-      description: 
+      description: The refCountEntity that holds the values that will be saved
     return:
       type: CRMScript.Global.Void
   example: 
@@ -151,14 +151,14 @@ items:
   nameWithType: NSNumberAllocationAgent.SaveRefCountEntity(NSRefCountEntity)
   fullName: CRMScript.NetServer.NSNumberAllocationAgent.SaveRefCountEntity(NSRefCountEntity)
   type: Method
-  summary: "\nUpdates the existing NSRefCountEntity or creates a new NSRefCountEntity if the id parameter is 0<p></p>\n<strong>Parameters</strong>:<p></p>\n<ul><li><strong>refCountEntity</strong>The NSRefCountEntity to save.</li></ul>\n"
+  summary: "\nUpdates the existing NSRefCountEntity or creates a new NSRefCountEntity if the id parameter is 0\n"
   remarks: 
   syntax: 
     content: NSRefCountEntity SaveRefCountEntity(NSRefCountEntity refCountEntity)
     parameters:
     - id: refCountEntity
       type: CRMScript.NetServer.NSRefCountEntity
-      description: 
+      description: The NSRefCountEntity to save.
     return:
       type: CRMScript.NetServer.NSRefCountEntity
   example: 
